first part of implementation of transfering user's library from one account to another

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
     </script>
 
   <a href="/albums" style="padding: 5px; border: 1px solid black; margin-left: 100px; margin-top: 30px">Albums</a>
+  <a href="/transfer" style="padding: 5px; border: 1px solid black; margin-left: 100px; margin-top: 30px">Transfer</a>
 
   <script id="oauth-template" type="text/x-handlebars-template">
       <h2>oAuth info</h2>
