--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       <div id="loggedin">
         <div id="user-profile"></div>
         <div id="oauth"></div>
+        <button class="btn btn-default" id="logout">Logout</button>
         <button class="btn btn-default" id="obtain-new-token">
           Obtain new token using the refresh token
         </button>
@@ -97,6 +98,16 @@
          * Obtains parameters from the hash of the URL
          * @return Object
          */
+        const getCookieByName = (name) => {
+          const cookie = document.cookie
+            .split(';')
+            .filter((el) => el.includes(`${name}=`))[0];
+          if (!cookie) {
+            return false;
+          }
+          return cookie.replace(`${name}=`, '');
+        };
+
         function getHashParams() {
           var hashParams = {};
           var e,
@@ -120,9 +131,14 @@
 
         var params = getHashParams();
 
-        var access_token = params.access_token,
-          refresh_token = params.refresh_token,
-          error = params.error;
+        const access_token = getCookieByName('token');
+        const refresh_token = getCookieByName('refresh_token');
+        // var access_token = params.access_token,
+        //   refresh_token = params.refresh_token,
+        //   error = params.error;
+        const error = null;
+        console.log(access_token);
+        console.log(refresh_token);
 
         if (error) {
           alert('There was an error during the authentication');
@@ -171,6 +187,13 @@
             },
             false
           );
+
+          document.getElementById('logout').addEventListener('click', (el) => {
+            document.cookie = 'token= ;expires=Thu, 01 Jan 1970 00:00:01 GMT';
+            document.cookie =
+              'refresh_token= ;expires=Thu, 01 Jan 1970 00:00:01 GMT';
+            location.reload();
+          });
         }
       })();
     </script>
